# libnfctag

./: .gitignore  AUTHORS  INSTALL  LICENSE  Makefile.am  README.md  configure.ac  nfctag_config.h.in
src/: Makefile.am  SmeNfc.h  SmeNfcConfig.h.in  libnfctag.pc.in
src/nfc/: NT3H1101.cpp  NT3H1101.h  NT3H1101_model.h  SmeNfc.cpp
src/nfc/ndef/: ndef.cpp
src/nfc/ndef/rtd/: nfcForum.cpp  rtdTypes.h  rtdUri.cpp  rtdUri.h
src/nfctag/: NT3H1101.cpp  NT3H1101.h  NT3H1101_model.h  SmeNfc.cpp
src/nfctag/ndef/: ndef.cpp  ndef.h
src/nfctag/ndef/rtd/: nfcForum.h  rtdText.cpp  rtdText.h  rtdTypes.h
utils/: .gitignore  Makefile.am  nfc-tool.cpp
