###############################################################################
# Created on 2019-10-22 by Nick Stoughton <nstoughton@logitech.com>
#
# Copyright (c) 2019 Logitech, Inc.  All Rights Reserved
# This program is a trade secret of LOGITECH, and it is not to be reproduced,
# published, disclosed to others, copied, adapted, distributed or displayed
# without the prior authorization of LOGITECH.
#
# Licensee agrees to attach or embed this notice on all copies of the program,
# including partial copies or modified versions thereof.
###############################################################################

###############################################################################
#
# Derived from a fork of the SmartEverything NXP NT3H1101 Arduino library
# See README-upstream.md for details of that release.
# This version is modified for use within the logi-embedded Linux environment,
#
###############################################################################

SUBDIRS = src utils
